Add About, update README

--- a/MostViewedArticles/app/src/main/res/values/strings.xml
+++ b/MostViewedArticles/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Most Viewed Articles</string>
     <string name="title_article_detail">Article Detail</string>
+    <string name="about_details">This application uses The New York Times API. It is an unofficial application and is not endorsed by The New York Times.</string>
+    <string name="nytimes_dev_url">http://developer.nytimes.com</string>
 </resources>
