Minor polishes, remove comments

--- a/MostViewedArticles/app/src/main/res/values/strings.xml
+++ b/MostViewedArticles/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_article_detail">Article Detail</string>
     <string name="about_details">This application uses The New York Times API. It is an unofficial application and is not endorsed by The New York Times.</string>
     <string name="nytimes_dev_url">http://developer.nytimes.com</string>
+    <string name="api_key_needed">Please obtain your API KEY first from http://developer.nytimes.com</string>
 </resources>
